src/ApiGateways/EnvoyDev/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 8080
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:              
              - match:
                  prefix: "/r"
                route:                  
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: rabbitmq-cluster
              - match:
                  prefix: "/assets-api"
                route:                  
                  auto_host_rewrite: true
                  prefix_rewrite: "/api"
                  cluster: assets-api-cluster
              - match:
                  prefix: "/hub"
                route:
                  auto_host_rewrite: true                  
                  cluster: ticker-signalrhub-cluster
                  timeout: 300s
                  upgrade_configs:
                    upgrade_type: "websocket"
                    enabled: true
              - match:
                  prefix: "/"
                route:                  
                  auto_host_rewrite: true                  
                  cluster: blazorapp-cluster
  clusters:  
  - name: rabbitmq-cluster
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: rabbitmq-cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: rabbitmq
                #address: 'rabbitmq-service.default'
                port_value: 15672
  - name: assets-api-cluster
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: assets-api-cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: assets-api
                #address: 'assets-api-service.default'
                port_value: 80
  - name: ticker-signalrhub-cluster
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: ticker-signalrhub-cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ticker-signalrhub
                #address: 'ticker-signalrhub-service.default'
                port_value: 80
  - name: blazorapp-cluster
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: blazorapp-cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: blazorapp
                #address: 'blazorapp-service.default'
                port_value: 80
